# Scribepad

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: README.md
scripts/: get_long_demo.sh
src/voice_transcribe/: cli.py
